--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.27.0
-  firebase_storage: ^11.3.0
-  cloud_firestore: ^4.15.8
-  audioplayers: ^1.0.1
+  firebase_core: ^3.4.0
+  firebase_storage: ^12.2.0
+  cloud_firestore: ^5.4.0
+  audioplayers: ^6.1.0
+  provider: ^6.0.5
 
 
 
