--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   audioplayers: ^6.1.0
   provider: ^6.0.5
   firebase_auth: ^5.2.0
+  just_audio: ^0.9.34
 
 
   # The following adds the Cupertino Icons font to your application.
