--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,14 @@
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext {
+        kotlin_version = '1.7.10'
+    }
     repositories {
         google()
         mavenCentral()
     }
-
     dependencies {
+        // Aggiunto l'Android Gradle Plugin aggiornato
+        classpath 'com.android.tools.build:gradle:8.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.15'
     }
